--- a/JenkinsFile
+++ b/JenkinsFile
@@ -19,23 +19,23 @@ pipeline {
         stage('Django Migrations') {
             steps {
                 // Run Django makemigrations command for the 'about' app
-                bat 'manage.py makemigrations about'
+                bat 'pip manage.py makemigrations about'
                 
                 // Apply migrations for the 'about' app
-                bat 'manage.py migrate about'
+                bat 'pip manage.py migrate about'
             }
         }
 
         stage('Create super User'){
             steps{
-                bat 'manage.py createsuperuser --username=admin --email=admin@example.com --noinput --password admin1234'
+                bat 'pip manage.py createsuperuser --username=admin --email=admin@example.com --noinput --password admin1234'
             }
         }
        
         stage('Run Development Server') {
             steps {
                 // Run Django server
-                bat 'manage.py runserver'
+                bat 'pip manage.py runserver'
             }
         }
     }
