--- a/requirements/requirements-dev.txt
+++ b/requirements/requirements-dev.txt
@@ -39,3 +39,8 @@ sqlparse==0.4.4
     # via django
 typing-extensions==4.5.0
     # via dj-database-url
+
+selenium==4.12.0
+pytest==7.3.0
+pytest-cov==4.0.0
+pytest-django==4.5.2
